--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,7 +15,6 @@ body {
   align-items: center;
   height: 100vh;
   position: relative;
-  overflow: hidden;
 
   &-main {
     flex: 0 1 100%;
