--- a/src/index.css
+++ b/src/index.css
@@ -350,7 +350,7 @@ select[multiple] { height: auto; background-image: none; }
 /* ===================================================== */
 body { background-color: #d7d7e4; }
 
-.app-Layout { display: flex; flex-flow: column nowrap; justify-content: stretch; align-items: center; height: 100vh; position: relative; overflow: hidden; }
+.app-Layout { display: flex; flex-flow: column nowrap; justify-content: stretch; align-items: center; height: 100vh; position: relative; }
 
 .app-Layout-main { flex: 0 1 100%; width: 100%; }
 
@@ -540,7 +540,7 @@ body { background-color: #d7d7e4; }
   .large-text-justify { text-align: justify; } }
 
 @media screen and (min-width: 75em) { /* MQPacker */
-  .app-DevNotes { display: block; position: absolute; top: 10rem; left: 50%; -webkit-transform: translateX(13.125rem) translateZ(0); transform: translateX(13.125rem) translateZ(0); width: 23.75rem; margin: 0; padding: 0; overflow: hidden; } }
+  .app-DevNotes { display: block; position: absolute; top: 10rem; left: 50%; -webkit-transform: translateX(13.125rem) translateZ(0); transform: translateX(13.125rem) translateZ(0); width: 23.75rem; max-height: 60%; margin: 0; padding: 0; overflow: auto; } }
 
 @media screen and (min-width: 90em) { /* MQPacker */ }
 
